--- a/views/index.jade
+++ b/views/index.jade
@@ -18,8 +18,8 @@ block content
           .row
             .col-xs-4.new-room
               p connect to a new room id:
-              form(method="get")
-                  input(name="id")
+              form(method="get" action="/join")
+                  input(name="room" type="number")
                   input(type="submit", value="Join")
 
           .row
