Add socket.io connection bootstrap

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel="stylesheet", href='/vendor/bootstrap/dist/css/bootstrap.min.css')
     script(src='/vendor/jquery/dist/jquery.min.js')
     script(src='/vendor/bootstrap/dist/js/bootstrap.min.js')
+    script(src='/vendor/socket.io-client/socket.io.js')
     script(src='/javascripts/scripts.js')
 
   body
