Reformat views; Implement client-side users list live update

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,57 +1,3 @@
 body {
-    padding: 50px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-    color: #00B7FF;
-    text-decoration: none;
-}
-
-.chat {
-    margin: 1%;
-    height: 500px;
-    border: solid yellowgreen;
-    position: relative;
-}
-
-.users {
-    color: gray;
-    border: solid yellow;
-    position: absolute;
-}
-
-.messages {
-    top: 5px;
-    right: 0;
-}
-
-.new-room {
-    font-size: 14px;
-}
-
-.new-room a input {
-    float: left;
-    position: absolute;
-    bottom: 0;
-}
-
-.new-room form {
-    float: right;
-    margin-top: -10px;
-    height: 40px;
-    width: 100px;
-}
-
-.bottom {
-    position: absolute;
-    border: solid blue;
-    bottom: 5px;
-    width: 100%;
-}
-
-.right-panel {
-    height: 500px;
-    padding: 0;
-    margin: 0;
+    padding-top: 60px;
 }
