--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,8 +6,10 @@ html
     link(rel="stylesheet", href='/vendor/bootstrap/dist/css/bootstrap.min.css')
     script(src='/vendor/jquery/dist/jquery.min.js')
     script(src='/vendor/bootstrap/dist/js/bootstrap.min.js')
+    script(src='/vendor/underscore/underscore-min.js')
     script(src='/vendor/socket.io-client/socket.io.js')
     script(src='/javascripts/scripts.js')
 
   body
+    include ./includes/header
     block content
